--- a/index.html
+++ b/index.html
@@ -121,13 +121,6 @@
                     <figure class="identities">
                         <figcaption><i class="fas fa-external-link-alt"></i>Social Network</figcaption>
                         <ul>
-                            <li class="shutdown">
-                                <a href="#">
-                                    <i aria-hidden="true" class="fab fa-google-plus"></i>
-                                    <span class="label">Google+</span>
-                                    <span class="fake-link">CH6306</span>
-                                </a>
-                            </li>
                             <li>
                                 <a href="https://twitter.com/CH6306">
                                     <i aria-hidden="true" class="fab fa-twitter"></i>
@@ -140,13 +133,6 @@
                                     <i aria-hidden="true" class="fab fa-telegram"></i>
                                     <span class="label">Telegram</span>
                                     <span class="fake-link">@CH6306</span>
-                                </a>
-                            </li>
-                            <li class="shutdown">
-                                <a href="#">
-                                    <i aria-hidden="true" class="fab fa-weibo"></i>
-                                    <span class="label">weibo.com</span>
-                                    <span class="fake-link">[redacted]</span>
                                 </a>
                             </li>
                         </ul>
@@ -220,15 +206,10 @@
 
                         <span class="label">
                             <i aria-hidden="true" class="fas fa-gamepad"></i>
-                            BEMANI (iidx, jubeat, sdvx, etc.)
-                        </span>
-                        <span class="label">
-                            <i aria-hidden="true" class="fas fa-gamepad"></i>
-                            SEGA (chunithm, etc.)
+                            BEMANI (musedash，cytus2, jubeat, sdvx, etc.)
                         </span>
                         <span class="label">
                             <i aria-hidden="true" class="fas fa-star"></i>
-                            TAITO (Groove Coaster)
                         </span>
                     </div>
                 </div>
