--- a/index.html
+++ b/index.html
@@ -206,10 +206,11 @@
 
                         <span class="label">
                             <i aria-hidden="true" class="fas fa-gamepad"></i>
-                            BEMANI (musedash，cytus2, jubeat, sdvx, etc.)
+                            musedash，cytus2
                         </span>
                         <span class="label">
                             <i aria-hidden="true" class="fas fa-star"></i>
+			rythmdoctor?
                         </span>
                     </div>
                 </div>
