--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
 
                         <span class="label">
                             <i aria-hidden="true" class="fas fa-gamepad"></i>
-                            musedash，cytus2
+                            Musedash，cytus2
                         </span>
                         <span class="label">
                             <i aria-hidden="true" class="fas fa-star"></i>
-			rythmdoctor?
+			    Rythmdoctor?
                         </span>
                     </div>
                 </div>
