--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <title>About CH</title>
-    <script src="https://files.cnblogs.com/files/quaint/sakuraPlus.js"></script>
+    <script src="sakura.js"></script>
 </head>
 
 <body>
